# gstreamer-pipeline-tester

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/: Deploy.cmake  FindAppImageDependencies.cmake  FindGraphViz.cmake
qml/: main.qml
src/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
